--- a/Submit.html
+++ b/Submit.html
@@ -18,5 +18,6 @@
   </ol>
   <form action="https://www.freecatphotoapp.com/submit-cat-photo" 
     <input type="text" placeholder="cat photo URL"><button type="submit">Submit</button>
+    <input type="text" required>
   </form>
 </main>
